--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <div class="background"></div>a
     <!-- Bird -->
-    <img src="images/Bird.png" alt="bird-img" class="bird" id="bird-1">
+    <img src="./images/Bird.png" alt="bird-img" class="bird" id="bird-1">
 
     <!-- Game Instructions -->
     <div class="message">
