--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="background"></div>
 
   <!-- Bird -->
-  <img src="images/Bird.png" alt="bird" class="bird" id="bird-1">
+  <img src="./images/Bird.png" alt="bird" class="bird" id="bird-1">
 
   <!-- Message -->
   <div class="message">
