--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <!-- Message -->
   <div class="message">
       Play With Me  
-      <p><span style="color: red;">↑</span> Tap Screen or Press ArrowUp to Fly</p>
+      <p><span style="color: red;">↑</span> START</p>
   </div>
 
   <!-- Score -->
