--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Flappy Game</title>
-  <link rel="icon" type="image/png" href="images/favicon.ico" />
-  <link rel="stylesheet" href="style.css">
-  <script src="script.js" defer></script>
+  <link rel="icon" type="image/png" href="./images/favicon.ico" />
+  <link rel="stylesheet" href="./style.css">
+  <script src="./script.js" defer></script>
 </head>
 <body>
 
@@ -18,7 +18,7 @@
   <!-- Message -->
   <div class="message">
       Play With Me  
-      <p><span style="color: red;">↑</span> START</p>
+      <p><span style="color: red;">↑</span> Tap or Press Enter to Start</p>
   </div>
 
   <!-- Score -->
